methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:25: error: '=>' expected but ';' found.
      case 1 pattern() ; forward(4)
                       ^PatternPicture:26: error: '=>' expected but ';' found.
      case 2 pattern() ; left() ; forward(4) ; right() ; backward(4)
                       ^PatternPicture:27: error: '=>' expected but ';' found.
      case 3 pattern() ; forward(4)
                       ^PatternPicture:29: error: '=>' expected but '}' found.
    }
    ^